--- a/app/views/my-account/security.pug
+++ b/app/views/my-account/security.pug
@@ -7,7 +7,7 @@ block body
       .modal-content
         .modal-header.d-block.text-center
           h5.modal-title= t('2FA')
-        form(action=ctx.path, method='POST').ajax-form.confirm-prompt.mt-3
+        form(action=ctx.path, method='POST').ajax-form.mt-3
           input(type='hidden', name='_method', value='POST')
           input(type="hidden", name="_csrf", value=ctx.csrf)
           input(type='hidden', name='enable_2fa', value='true')
@@ -25,6 +25,20 @@ block body
           .modal-footer.text-right
             button(type='button', data-dismiss='modal', aria-label=t('Cancel')).btn.btn-secondary= t('Cancel')
             button(type='submit').btn.btn-primary= t('Enable 2FA')
+  #modal-disable-2fa(tabindex='-1', role='dialog').modal.fade
+    .modal-dialog(role='document')
+      .modal-content
+        .modal-header.d-block.text-center
+          h5.modal-title= t('2FA')
+        form(action=ctx.path, method='POST').ajax-form.mt-3
+          input(type='hidden', name='_method', value='POST')
+          input(type="hidden", name="_csrf", value=ctx.csrf)
+          input(type='hidden', name='enable_2fa', value='false')
+          .modal-body.text-center
+            p= t('Are you sure you want to disable 2FA?')
+          .modal-footer.text-right
+            button(type='button', data-dismiss='modal', aria-label=t('Cancel')).btn.btn-secondary= t('Cancel')
+            button(type='submit').btn.btn-danger= t('Disable 2FA')
   .container-fluid.py-3
     .row.mt-1
       .col
@@ -52,4 +66,7 @@ block body
             h4.card-header= t('2FA')
             .card-body
               .form-group.floating-label
+              if user.two_factor_enabled
+                button(data-toggle='modal', data-target='#modal-disable-2fa', type='button').btn.btn-danger.btn-sm.my-auto= t('Disable 2FA')
+              else
                 button(data-toggle='modal', data-target='#modal-enable-2fa', type='button').btn.btn-primary.btn-sm.my-auto= t('Enable 2FA')
