--- a/app/views/my-account/2fa.pug
+++ b/app/views/my-account/2fa.pug
@@ -18,4 +18,4 @@ block body
               button.btn.btn-primary.btn-block.btn-lg(type="submit")= t('Submit Passcode')
           .card-footer.text-center
             = t('Having trouble? ')
-            a.card-link(href=l('/forgot-2fa-passcode'))= t('Recover passcode?')
+            a.card-link(href=l('/forgot-2fa-passcode'))= t('Recover passcode')
