--- a/app/views/otp/setup.pug
+++ b/app/views/otp/setup.pug
@@ -1,5 +1,5 @@
 
-extends ../../layout
+extends ../layout
 
 block body
   #authenticator-apps-modal(tabindex='-1', role='dialog').modal.fade
@@ -73,34 +73,34 @@ block body
               p= t('Follow the below steps to enable two-factor authentication on your account.')
               hr
             .container
-              form(action=l('/2fa/otp/verify'), method='POST').ajax-form.confirm-prompt
+              form(action=l('/otp/setup'), method='POST').ajax-form.confirm-prompt
                 input(type="hidden", name="_csrf", value=ctx.csrf)
-                label(for='two-factor-step-one')
+                label(for='otp-step-one')
                   b= t('Step 1: ')
                   = t('Install an')
                   = ' '
                   a.card-link(href='#' data-toggle='modal-anchor', data-target='#authenticator-apps-modal').text-primary= t('authentication app')
                   = ' '
                   = t('on your device.')
-                label(for='two-factor-step-two')
+                label(for='otp-step-two')
                   b= t('Step 2: ')
                   = t('Scan this QR code using the app:')
                 img(src=qrcode, width=250, height=250, alt="").mx-auto.d-block
                 hr
-                label(for='two-factor-step-three')
+                label(for='otp-step-three')
                   b= t('Step 3: ')
                   = t('Enter the token generated from the app:')
                 .form-group.floating-label
                   input(type='text', name='token', required, placeholder=' ').form-control.form-control-lg#input-token
                   label(for='input-token') Verification Token
-                a.card-link.text-primary(href='#' data-toggle='collapse' data-target='#two-factor-copy')= t('Can’t scan the QR code? Follow alternative steps')
-                #two-factor-copy.collapse
+                a.card-link.text-primary(href='#' data-toggle='collapse' data-target='#otp-copy')= t('Can’t scan the QR code? Follow alternative steps')
+                #otp-copy.collapse
                   hr
                   p.text-secondary= t('Manually configure your authenticator app using this code:')
                   .input-group.input-group-sm.floating-label.form-group
-                    input(type='text', readonly, value=user[config.passport.fields.twoFactorToken]).form-control#two-factor-token
+                    input(type='text', readonly, value=user[config.passport.fields.otpToken]).form-control#otp-token
                     .input-group-append
-                      button(type='button', data-toggle="clipboard", data-clipboard-target="#two-factor-token").btn.btn-primary
+                      button(type='button', data-toggle="clipboard", data-clipboard-target="#otp-token").btn.btn-primary
                         i.fa.fa-clipboard
                         = ' '
                         = t('Copy')
